[gd_scene load_steps=9 format=3 uid="uid://px7nbmqj3apj"]

[ext_resource type="Script" path="res://world.gd" id="1_dib50"]
[ext_resource type="PackedScene" uid="uid://jh7aquomr572" path="res://player.tscn" id="2_5seee"]
[ext_resource type="Texture2D" uid="uid://bxanxeqywqdp8" path="res://heart.png" id="4_dlarg"]
[ext_resource type="PackedScene" uid="uid://mxia58a21vhg" path="res://level_completed.tscn" id="5_2pkry"]
[ext_resource type="PackedScene" uid="uid://bbigt1ksuvl8b" path="res://level_tile_map.tscn" id="6_tsotk"]

[sub_resource type="Animation" id="Animation_tglr8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in: 3"]
}

[sub_resource type="Animation" id="Animation_2vo4f"]
resource_name = "countdown"
length = 3.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1.2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in: 3", "Start in: 2", "Start in: 1"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s632c"]
_data = {
"RESET": SubResource("Animation_tglr8"),
"countdown": SubResource("Animation_2vo4f")
}

[node name="World" type="Node2D"]
script = ExtResource("1_dib50")

[node name="Player" parent="." instance=ExtResource("2_5seee")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_2pkry")]
visible = false

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.517647)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start in: 3"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 33.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
text = "0.0s"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HeartsLabel" type="Label" parent="CanvasLayer/CenterContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heart" type="Sprite2D" parent="CanvasLayer/CenterContainer/HBoxContainer/HBoxContainer"]
position = Vector2(68, 7)
scale = Vector2(2, 2)
texture = ExtResource("4_dlarg")

[node name="LevelTileMap" parent="." instance=ExtResource("6_tsotk")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_s632c")
}
autoplay = "countdown"

[connection signal="next_level" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_next_level"]
[connection signal="retry" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_retry"]
